# felix86

./: .clang-format  .gitignore  CMakeLists.txt  CheckGit.cmake  FUNDING.yml  LICENSE  README.md  README_CN.md  out.txt  riscv.cmake
.github/workflows/: unit-tests.yml
counts/: Base.json  Base_NoFlags.json  HotBlocks.json  SSE1.json  SSE2.json  SSE3.json  SSE4_1.json  SSSE3.json  X87.json
docs/: BenchmarkGoals.md  FrontendAndIR.md  HelpfulDocuments.md  IR.md  Interpreter.md  contributing.md  conventions.md  faq.md  helpful-documents.md  how-to-use.md  jit-faq.md
docs/internals/: contributing.md  conventions.md  design.md  tedious-tasks.md  xmm-registers.md
include/: felix86.h
include/felix86/: felix86.h  gui.h
src/felix86/: emulator.cpp  emulator.hpp  felix86.c  gui.cpp  launcher.cpp  main.c  main.cpp
src/felix86/aot/: aot.cpp  aot.hpp  common.cpp  control_flow_analysis.cpp  function_start_finder.cpp
src/felix86/backend/: allocated_register.hpp  allocation.hpp  allocation_map.hpp  allocation_wrapper.hpp  backend.cpp  backend.hpp  block.cpp  block.hpp  block_metadata.cpp  block_metadata.h  code_cache.hpp  disassembler.hpp  emitter.cpp  emitter.hpp  emitter_dispatch.cpp  function.cpp  function.hpp  instruction.cpp  instruction.hpp  registers.hpp
src/felix86/common/: address.hpp  alloc.c  alloc.cpp  allocator.c  allocator.h  callbacks.h  config.cpp  config.hpp  config.inc  cpuid.c  cpuid.h  debug.cpp  debug.hpp  decoder.cpp  decoder.hpp  disk_cache.cpp  disk_cache.hpp  elf.cpp  elf.hpp  environment.h  exit.c  exit.cpp  exit.h  exit.hpp  file.c  file.cpp  file.h  file.hpp  frame.hpp  gdbjit.cpp  gdbjit.hpp  gdbjitblock.h  git_version.cpp.in  global.c  global.cpp  global.h  global.hpp  hash.cpp  hash.hpp  info.cpp  (+41 more)
src/felix86/frontend/: frontend.c  frontend.cpp  frontend.h  frontend.hpp  instruction.h  instruction.hpp  primary.inc  secondary.inc  secondary_66.inc  secondary_f2.inc  secondary_f3.inc  tertiary_38.inc  tertiary_38_66.inc  tertiary_38_f2.inc  tertiary_3a_66.inc
src/felix86/hle/: abi.cpp  abi.hpp  brk.cpp  brk.hpp  cpuid.c  cpuid.cpp  cpuid.h  cpuid.hpp  egl_thunks.inc  filesystem.c  filesystem.cpp  filesystem.h  filesystem.hpp  generate_mappings.cpp  gl_thunks.inc  glibc_thunks.inc  glx_thunks.inc  guest_types.hpp  ioctl32.cpp  ioctl32.hpp  ipc32.cpp  ipc32.hpp  libgl_guest_ptrs.cpp  libgl_guest_ptrs.hpp  mmap.cpp  mmap.hpp  rdtsc.cpp  rdtsc.hpp  signals.cpp  signals.hpp  socket.cpp  socket.hpp  socket32.cpp  socket32.hpp  stat.hpp  syscall.c  syscall.cpp  syscall.h  syscall.hpp  syscall_32.cpp  (+11 more)
src/felix86/hle/drm/: README.md  common.hpp  drm.cpp  drm.hpp  radeon.cpp  radeon.hpp
src/felix86/hle/guest_libs/: README.md  build.sh  generator.cpp  libEGL.asm  libEGL.so.1  libGLX.asm  libGLX.c  libvulkan.asm  libvulkan.so.1  libwayland-client.asm  libwayland-client.c
src/felix86/ir/: allocation.hpp  block.c  block.cpp  block.h  block.hpp  block_metadata.cpp  block_metadata.h  copy_propagation_pass.cpp  dominator_tree.hpp  emitter.c  emitter.cpp  emitter.h  emitter.hpp  entry_exit_unused_pass.cpp  function.cpp  function.hpp  function_cache.cpp  function_cache.h  function_cache.hpp  handlers.c  handlers.cpp  handlers.h  handlers.hpp  handlers_weak.c  handlers_weak.cpp  instruction.c  instruction.cpp  instruction.h  instruction.hpp  instruction.inc  instruction_list.c  instruction_list.h  interpreter.c  interpreter.h  naming_pass.cpp  opcode.cpp  opcode.hpp  opcodes.inc  passes.c  passes.cpp  (+8 more)
src/felix86/ir/passes/: block_shenanigans_pass.cpp  copy_propagation_pass.cpp  critical_edge_splitting_pass.cpp  dead_code_elimination_pass.cpp  extraneous_writeback_pass.cpp  graph_coloring_pass.cpp  immediate_transformation_pass.cpp  local_cse_pass.cpp  naming_pass.cpp  passes.hpp  peephole_pass.cpp  replace_setguest_pass.cpp  spill_everything_pass.cpp  ssa_destruction_pass.cpp  ssa_pass.cpp  vector_state_pass.cpp
src/felix86/loader/: elf.c  elf.cpp  elf.h  elf.hpp  loader.c  loader.cpp  loader.h  loader.hpp
src/felix86/tools/: generate_cpuid.cpp  generate_fuzz.cpp  generate_instruction_count.cpp  generate_strace_switch.cpp  generate_test.cpp  install.sh  main.c
src/felix86/v1/: README.md
src/felix86/v1/aot/: aot.cpp  control_flow_analysis.cpp
src/felix86/v1/backend/: allocation_map.hpp  emitter_dispatch.cpp  function.cpp  instruction.cpp  serialized_function.hpp
src/felix86/v2/: fast_recompiler.cpp  fast_recompiler.hpp  handlers.cpp  handlers.inc  handlers_x87.cpp  interpreter.cpp  recompiler.cpp  recompiler.hpp
tests/: add.cpp  and.cpp  aux_add.cpp  aux_sub.cpp  common.cpp  control_flow.cpp  fex_test_loader.cpp  fex_test_loader.hpp  lea.cpp  mov.cpp  runner.hpp  sbb.cpp  shift.cpp  special.cpp  sub.cpp  xmm.cpp
tests/ASM/felix86_bugs/: adc.asm  add8_lock.asm  bsr_reg.asm  bt_jc.asm  bts.asm  cfmerge.asm  cmpxchg64_lock.asm  crc_simple.asm  dl_aux_init_stuck.asm  fsave.asm  llvmpipe_rast_triangle.asm  movd.asm  packsswb.asm  pmovmskb.asm  regalloc_overload.asm  ror_clearof.asm  ssa_phi_bug.asm  strlen_sse2.asm  test_high.asm  why.asm
tests/Binaries/: binary_test_loader.cpp  build.sh  common.h
tests/Binaries/Clone/: clone_atomic.c  clone_atomic.out  clone_simple.c  clone_simple.out  clone_vfork.c  clone_vfork.out  clone_vfork_2.c  clone_vfork_2.out  clone_wait.c  clone_wait.out  posix_spawn.c  posix_spawn.out
tests/Binaries/SMC/: inline.c  inline.out
tests/Binaries/Signals/: alarm.c  alarm.out  reconstruct_sigsegv.c  reconstruct_sigsegv.out  recursive.c  recursive.out  recursive2.c  recursive2.out  sigaltstack.c  sigchld.c  sigchld.out  sigsegv_simple.c  sigsegv_simple.out  sigsuspend.c  sigsuspend.out
tests/Binaries/Simple/: cpuinfo.c  cpuinfo.out  hello_world.c  hello_world.out  unaligned_atomic.c  unaligned_atomic.out
tests/FEX/: common.cpp  felix86_bugs.cpp  fex_test_loader.cpp  fex_test_loader.hpp  op_size.cpp  primary.cpp  primary_group.cpp  rep.cpp  secondary.cpp  secondary_modrm.cpp  tertiary.cpp  two_byte.cpp  twobyte.cpp  x87.cpp
tests/Unit/: mmap.cpp  paths.cpp
tests/ir/: control_flow.cpp  ir_runner.hpp  ssa.cpp
(+24 files in other folders)
